Fixed unclickable social media icons on mobile because of floats

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -428,35 +428,18 @@ p {
 
   .footer-icons {
     display: inline;
-    float: left;
+    padding: 0;
     @media (max-width:767px) {
       margin-left: 0;
       margin-top: 1em;
     }
-    //iphone 4 and 4S - portrait
-    @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-      padding-left: 116px;
-    }
-    //iPhone 5 and 5S - landscape
-    @media only screen and (min-device-width: 414px) and (max-device-width: 568px)and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-      padding: 0 100px 0 160px;
-    }
-    //iPhone 6 - landscape
-    @media only screen and (min-device-width: 414px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-      padding: 0 100px 0 210px;
-    }
-    //iPhne 6+ - landscape
-    @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-      padding: 0 140px 0 242px;
-    }
-
     @media (min-width:768px) and (max-width: 991px) {
       margin-left: 0;
       margin-top: 1em;
     }
 
     li {
-      float: left;
+      display: inline;
       list-style: none;
       padding: 0 1em 1em 0;
       @media (max-width:767px) {
